# banking

./: README.md  license.txt  pyproject.toml
bizaxl_banking/: hooks.py  patches.txt
bizaxl_banking/banking/: reconciliation.py
bizaxl_banking/banking/bureau/: cibil.py
bizaxl_banking/banking/compliance/: sanctions.py
bizaxl_banking/banking/kyc/: aadhaar.py  esign.py  pan.py
bizaxl_banking/banking/notifications/: messaging.py
bizaxl_banking/banking/payment_gateways/: nach.py  npci.py
bizaxl_banking/banking/reports/: emi_dues_collections.py  interest_income_accrual.py  kyc_pending_tracker.py  payment_reconciliation.py  portfolio_summary.py  priority_sector_lending.py
bizaxl_banking/banking/tests/: test_e2e_full_lifecycle.py
bizaxl_banking/banking/workspace/: banking.json
bizaxl_banking/fixtures/: banking_account.json  banking_account_entitlement.json  banking_aml_screening_log.json  banking_branch.json  banking_bulk_payment.json  banking_collateral.json  banking_configuration.json  banking_customer.json  banking_customer_lead.json  banking_deposit_product.json  banking_dispute_case.json  banking_fraud_alert.json  banking_interest_rate_schedule.json  banking_kyc_document.json  banking_loan_account.json  banking_loan_application.json  banking_nach_mandate.json  banking_npa_tracker.json  banking_payment_order.json  banking_positive_pay_record.json  banking_regulatory_report.json  banking_service_charge_rule.json  banking_standing_instruction.json  banking_state.json  banking_transaction_ledger.json  notification.json  role.json
(+81 files in other folders)
